# stego-carving

./: CMakeLists.txt  README.md
.github/workflows/: cmake_build.yml
include/: picture.h  resize_demo.h  seamcarver.h
src/: picture.cpp  resize_demo.cpp  seam_carver.cpp  seamcarver.cpp
tests/: picture_tests.cpp  seam_carver_tests.cpp  seamcarver_tests.cpp
